Fix calendar overlap with button

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1875,7 +1875,7 @@
 			}
 
 			.box.feature > div {
-				height: 200px;
+				height: 220px;
 
 			}
 
